Mijn eerste Commit

--- a/H1/Op3/index.html
+++ b/H1/Op3/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>JavaScript Op3</title>
 </head>
 <body>
-
+Hallo Bekijkers
+<script src="opdracht3.js"></script>
 </body>
 </html>
