H4 Af! En fixes bij andere hoofdstukken

--- a/H2/Op2/index.html
+++ b/H2/Op2/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript H2 Op2</title>
+    <title>JavaScript H2 H4.Op2</title>
     <style>
         html {
             padding: 0px;
