--- a/H4/Op1/index.html
+++ b/H4/Op1/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript H4.Op3</title>
+    <title>Toeter</title>
 </head>
 <body>
-Hallo Bekijkers
-<script src="opdracht3.js"></script>
+<script src="functie.js"></script>
 </body>
 </html>
