--- a/H2/Op1/index.html
+++ b/H2/Op1/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Hs2 Op1</title>
+    <title>JavaScript Hs2 H4.Op1</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <style>
         #wrapper {
