--- a/H3/index.html
+++ b/H3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript H3 Op1</title>
+    <title>JavaScript H3 H4.Op1</title>
     <style>
         h1 {
             display: flex;
