Memory Game gemaakt

--- a/H5/index.html
+++ b/H5/index.html
@@ -8,7 +8,7 @@
             font-family: 'Copse', serif;
             text-align: center;
         }
-        #pics {
+        #fotos {
             width: 900px;
             height: 1350px;
             border: 1px solid gray;
@@ -33,8 +33,9 @@
 </head>
 <body>
 <h1>ColorChooser</h1>
+<h1>I love you</h1>
 <h3>Choose your favourite Color!</h3>
-<div id="pics"></div>
+<div id="fotos"></div>
 <script src="chooser.js"></script>
 </body>
 </html>
