H2 Op1 gefixt, Afbeeldingen werkten niet.

--- a/H2/Op1/index.html
+++ b/H2/Op1/index.html
@@ -34,8 +34,8 @@
         eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante,
         dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
         Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</p>
-    <img id="school">
-    <img id="school2">
+    <img src="opdracht1hoofdstuk2.js" id="school">
+    <img src="opdracht1hoofdstuk2.js" id="school2">
 </div>
 <script src="opdracht1hoofdstuk2.js"></script>
 </body>
